# Obsidian-Daylio-Parser

./: .gitignore  .pylintrc  Dockerfile  Dockerfile-test-suite  Pipfile  README.md  cmd_args.py  compile_md.py  config.py  dated_entries_group.py  dated_entry.py  errors.py  librarian.py  load_moods.py  main.py  moods.json  parse_csv.py  pyproject.toml  test_main.py  utils.py  write_md.py
.github/: copilot-instructions.md  git-commit-instructions.md
.github/workflows/: generate_PR_desc.yaml  integration-gate.yaml  publish-test.yaml  publish.yaml  pylint.yaml  test.yaml
_tests/: hack.py  incomplete-moods.json  sheet-2-corrupted-bytes.csv  test_config.py  test_dated_entries_group.py  test_dated_entry.py  test_errors.py  test_librarian.py  test_main.py  test_mood.py  test_output.py  test_utils.py  wrong_format_no_ext
_tests/expected_results/: 2022-10-25.md  2022-10-26.md  2022-10-27.md  2022-10-30.md
entry/: mood.py
shim/daylio-obsidian-parser/: README.md  pyproject.toml
shim/daylio-obsidian-parser/src/daylio_to_md/: __init__.py  __main__.py
src/: config.py  dated_entries_group.py  dated_entry.py  errors.py  librarian.py  main.py  utils.py
src/daylio_to_md/: __main__.py  config.py  dated_entries_group.py  dated_entry.py  errors.py  group.py  journal.py  journal_entry.py  librarian.py  reader.py  utils.py  writer.py
src/daylio_to_md/entry/: mood.py
src/entry/: mood.py
src/obsidian_daylio_parser/: __main__.py  config.py  errors.py  group.py  journal.py  journal_entry.py  librarian.py  logs.py  reader.py  utils.py  writer.py
src/obsidian_daylio_parser/entry/: mood.py
tests/: conftest.py  suppress.py  test_cli.py  test_cli_integration.py  test_config.py  test_dated_entries_group.py  test_dated_entry.py  test_entry.py  test_errors.py  test_group.py  test_journal_entry.py  test_librarian.py  test_mood.py  test_output.py  test_utils.py
tests/files/: all-valid.json  daylio_export_bad_inconsistent_fields.csv  daylio_export_bad_quoted_fields.csv  daylio_export_bad_unknown_fields.csv  daylio_export_ok.csv  daylio_export_ok_scales.csv  moods_ok_smallest.json
tests/files/golden_files/: 2022-10-25.md
tests/files/golden_files/after_scales/: 2026-03-30.md  2026-03-31.md  2026-04-02.md  2026-04-12.md
tests/files/golden_files/before_scales/: 2022-10-30.md
tests/files/scenarios/ok/: all-valid.csv  no-extension
tests/files/scenarios/ok/expect/: 2022-10-25.md  2022-10-26.md  2022-10-27.md  2022-10-30.md
tests/files/scenarios/partially-ok/: empty-lines-whitespace.csv  escaped-characters.csv  missing-fields.csv  too-many-cells.csv
tests/resources/journals/: locked.csv  wrong-format.txt
