[project]
name = "daylio-obsidian-parser"
dynamic = ["version", "readme"]
requires-python = ">= 3.8"
authors = [
	{name = "Paweł Ilnicki", email = "59067099+DeutscheGabanna@users.noreply.github.com"}
]
description = "Converts Daylio app .csv file into markdown files for use in Obsidian."
license = {file = "LICENSE", content-type = "text/markdown"}
classifiers = [
	"Topic :: Text Processing :: Markup :: Markdown",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Utilities",
	"Development Status :: 3 - Alpha",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3"
]
keywords = [ "csv", "markdown", ".md", ".csv", "daylio", "obsidian", "file converter" ]

[project.scripts]
# Make daylio_to_md command be recognised by shell as a program
# No need to type: python -m <package> anymore
daylio_to_md = "daylio_to_md.__main__:run"

[build-system]
requires = ["setuptools", "build", "wheel", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.versioningit]
vcs = "git"
next-version = "null"
[tool.versioningit.tag2version]
rmprefix = "v."