[project]
name = "daylio-obsidian-parser"
version = "0.3.2"
requires-python = ">=3.10"
description = "Compatibility shim for obsidian-daylio-parser package."
readme = "README.md"
authors = [
	{name = "Paweł Ilnicki", email = "59067099+DeutscheGabanna@users.noreply.github.com"}
]
dependencies = [
    "obsidian-daylio-parser>=0.3.0"
]

[project.scripts]
# Legacy CLI kept for compatibility with older scripts and docs.
daylio_to_md = "daylio_to_md.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

